<resources>
    <string name="app_name">GithubBrowserExample</string>
    <string name="github_logo">Github logo</string>
    <string name="ranapat_logo">Ranapat logo</string>

    <string name="empty_string"> </string>

    <string name="generic_error">generic error</string>
    <string name="unexpected_error">Unexpected error</string>

    <string name="error_configuration_undefined">No available configuration</string>
    <string name="error_organization_undefined">No such organization</string>
    <string name="error_users_undefined">Cannot get members list for the organization</string>
    <string name="error_user_undefined">Cannot get user details</string>
    <string name="error_loading_external_resource">Error loading the external url</string>

    <string name="navigation_back">back</string>

    <string name="search_hint">type organization login here…</string>
    <string name="search_icon">search icon</string>
    <string name="search_clear">clear search term</string>

    <string name="user_members_list">organization members list</string>
    <string name="user_member_list_icon">member icon</string>
    <string name="user_member_list_open">open user details</string>
    <string name="user_member_list_login">login: %s</string>
    <string name="user_member_list_name">%s / %s</string>
    <string name="user_member_list_public_repos">%s / public repos: %s</string>
    <string name="user_member_list_followers">%s / followers: %s</string>
    <string name="user_member_list_public_gists">%s / public gists: %s</string>
    <string name="user_member_list_loading_in_progress_list">fetching users in the organization…</string>
    <string name="user_member_list_loading_in_progress_details">fetching user details %d from %d, %d failed</string>
    <string name="user_member_list_incomplete">incomplete details</string>
    <string name="user_member_list_sort_name">sort by name</string>
    <string name="user_member_list_sort_public_repos">sort by public repos</string>
    <string name="user_member_list_sort_followers">sort by followers</string>
    <string name="user_member_list_sort_public_gists">sort by public gists</string>
    <string name="user_member_list_sort_asc">sort ASC</string>
    <string name="user_member_list_sort_desc">sort DESC</string>
    <string name="user_member_list_up_to_limit">limit results to predefined</string>
    <string name="user_member_list_no_limit">show all possible results</string>

    <string name="user_general_tab">General</string>
    <string name="user_general_tab_login">login: %s</string>
    <string name="user_general_tab_name">name: %s</string>
    <string name="user_general_tab_created_at">joined github: %s</string>
    <string name="user_general_tab_location">location: %s</string>
    <string name="user_general_tab_company">company: %s</string>
    <string name="user_general_tab_public_repos">public repos: %d</string>
    <string name="user_general_tab_followers">followers: %d</string>
    <string name="user_general_tab_public_gitsts">public gists: %d</string>

    <string name="user_general_repos">Repos</string>
    <string name="user_general_organizations">Organizations</string>

    <string name="retry">retry</string>
</resources>
