<LinearLayout xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:orientation="vertical">

    <View
        android:id="@+id/extraItemSpacing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/outline_margin"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/list_image_width"
            android:layout_height="@dimen/list_image_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_member_list_icon"
            android:scaleType="fitCenter"
            android:layout_marginStart="@dimen/outline_margin"
            android:layout_marginEnd="@dimen/outline_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_generic_error" />

        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/empty_string"
            android:textAlignment="viewStart"
            android:textColor="@color/primary_font_color"
            android:textSize="@dimen/smaller_font_size"
            android:singleLine="true"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/date"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:textAlignment="viewStart"
            android:textColor="@color/primary_font_color"
            android:textSize="@dimen/smallest_font_size"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            swipe:layout_constraintStart_toEndOf="@id/login"
            app:layout_constraintEnd_toStartOf="@id/progressBar"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="@dimen/list_wrapper_width"
            android:layout_height="@dimen/list_wrapper_height"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/open"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminate="true"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminateDrawable="@drawable/circular_progress_bar" />

        <ImageView
            android:id="@+id/incomplete"
            android:visibility="gone"
            android:layout_width="@dimen/list_wrapper_width"
            android:layout_height="@dimen/list_wrapper_height"
            android:layout_margin="@dimen/default_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_member_list_incomplete"
            android:scaleType="fitCenter"
            android:layout_marginStart="@dimen/outline_margin"
            android:layout_marginEnd="@dimen/outline_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/open"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_generic_error" />

        <ImageButton
            android:id="@+id/open"
            android:clickable="false"
            android:layout_width="@dimen/list_button_width"
            android:layout_height="@dimen/list_button_height"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/user_member_list_open"
            android:scaleType="fitCenter"
            android:layout_marginEnd="@dimen/double_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_right_primary_color_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>